--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		{ name: 'Ian "Opus" Napierkowski',            time: '18:07', begin: new Date(2017, 1, 18),  end: new Date() }
 	];
 
-	function drawChart() {
+	function drawPlayerChart() {
 		var colorScale = new Plottable.Scales.Color();
 
 		var xScale = new Plottable.Scales.Time();
@@ -64,32 +64,47 @@
 		]);
 
 		chart.renderTo("#recordtimeline");
-/*
-		var chart = new google.visualization.Timeline(document.getElementById('recordtimeline'));
-		chart.draw(timelineDataTable, {timeline: {rowLabelStyle: {fontSize: 9}}});
-
-		var yTicks = [];
-		for(var i = 0; i < 12; ++i) {
-			yTicks[i] = {v:i * 300, f:i * 5 + ':00'};
-		}
-		for(var i = 12; i < 14; ++i) {
-			yTicks[i] = {v:i * 300, f:'1:0' + ((i - 12) * 5) + ':00'};
-		}
-		for(var i = 14; i < 16; ++i) {
-			yTicks[i] = {v:i * 300, f:'1:' + ((i - 12) * 5) + ':00'};
-		}
-
-
-		var linechart = new google.visualization.LineChart(document.getElementById('linechart'));
-		linechart.draw(lineDataTable, {'chartArea': {'left': 130, 'top': 25, 'width': '100%', 'height': 450}, 'legend': {'position':'none'}, 'vAxis': {'minValue': 0, 'viewWindow': {'min': 0}, 'ticks': yTicks}});
-*/
 	}
 
-	jQuery(document).ready(function() { drawChart(); });
+	function convertTime(s) {
+		var c = s.split(':');
+		var secs = 0 + c[0] + c[1];
+		return secs;
+	}
+
+	function drawTimeChart() {
+		var colorScale = new Plottable.Scales.Color();
+
+		var xScale = new Plottable.Scales.Time();
+		var xAxis = new Plottable.Axes.Time(xScale, "bottom");
+
+		var yScale = new Plottable.Scales.Linear();
+		var yAxis = new Plottable.Axes.Numeric(yScale, "left");
+
+		var plot = new Plottable.Plots.Line()
+		  .x(           function(d) { return d.begin;              }, xScale)
+		  .y(           function(d) { return convertTime(d.time);  }, yScale)
+		  .attr("fill", function(d) { return d.name;               }, colorScale)
+		  .addDataset(new Plottable.Dataset(data));
+
+		var chart = new Plottable.Components.Table([
+			[yAxis, plot],
+			[null, xAxis]
+		]);
+
+		chart.renderTo("#linechart");
+	}
+
+	function drawCharts() {
+		drawPlayerChart();
+		drawTimeChart();
+	}
+
+	jQuery(document).ready(function() { drawCharts(); });
 </script>
 
 <svg id="recordtimeline" style="width: 100%; height: 350px;"></svg>
-<div id="linechart" style="width: 100%; height: 400px;"></div>
+<svg id="linechart" style="width: 100%; height: 400px;"></svg>
 <p>Important note<p>
 <p>The reason the time dropped like a rock from Arctic_Eagle's time wasn't that his runs were bad.  In fact they were very good.  It's that Solairflaire found the Thunderbird skip, and that completely changed the possible routing.  In addition, the glitched hammer and Palace 7 were routed in.</p>
 </body>
