--- a/index.html
+++ b/index.html
@@ -42,69 +42,54 @@
 		{ name: 'Ian "Opus" Napierkowski',            time: '18:07', begin: new Date(2017, 1, 18),  end: new Date() }
 	];
 
-	function drawPlayerChart() {
-		var colorScale = new Plottable.Scales.Color();
-
-		var xScale = new Plottable.Scales.Time();
-		var xAxis = new Plottable.Axes.Time(xScale, "bottom");
-
-		var yScale = new Plottable.Scales.Category();
-		var yAxis = new Plottable.Axes.Category(yScale, "left");
-
-		var plot = new Plottable.Plots.Rectangle()
-		  .x(           function(d) { return d.begin; }, xScale)
-		  .x2(          function(d) { return d.end;   })
-		  .y(           function(d) { return d.name;  }, yScale)
-		  .attr("fill", function(d) { return d.time;  }, colorScale)
-		  .addDataset(new Plottable.Dataset(data));
-
-		var chart = new Plottable.Components.Table([
-			[yAxis, plot],
-			[null, xAxis]
-		]);
-
-		chart.renderTo("#recordtimeline");
-	}
-
 	function convertTime(s) {
 		var c = s.split(':');
 		var secs = 0 + c[0] + c[1];
 		return secs;
 	}
 
-	function drawTimeChart() {
+	function drawCharts() {
 		var colorScale = new Plottable.Scales.Color();
 
 		var xScale = new Plottable.Scales.Time();
 		var xAxis = new Plottable.Axes.Time(xScale, "bottom");
 
-		var yScale = new Plottable.Scales.Linear();
-		var yAxis = new Plottable.Axes.Numeric(yScale, "left");
+		var yScalePlayer = new Plottable.Scales.Category();
+		var yAxisPlayer = new Plottable.Axes.Category(yScalePlayer, "left");
 
-		var plot = new Plottable.Plots.Line()
+		var plotPlayer = new Plottable.Plots.Rectangle()
+		  .x(           function(d) { return d.begin; }, xScale)
+		  .x2(          function(d) { return d.end;   })
+		  .y(           function(d) { return d.name;  }, yScalePlayer)
+		  .attr("fill", function(d) { return d.time;  }, colorScale)
+		  .addDataset(new Plottable.Dataset(data));
+
+		var xScale = new Plottable.Scales.Time();
+		var xAxis = new Plottable.Axes.Time(xScale, "bottom");
+
+		var yScaleTime = new Plottable.Scales.Linear();
+		var yAxisTime = new Plottable.Axes.Numeric(yScaleTime, "right");
+
+		var plotTime = new Plottable.Plots.Line()
 		  .x(           function(d) { return d.begin;              }, xScale)
-		  .y(           function(d) { return convertTime(d.time);  }, yScale)
+		  .y(           function(d) { return convertTime(d.time);  }, yScaleTime)
 		  .attr("fill", function(d) { return d.name;               }, colorScale)
 		  .addDataset(new Plottable.Dataset(data));
 
+		var plotGroup = new Plottable.Components.Group([plotPlayer, plotTime]);
+
 		var chart = new Plottable.Components.Table([
-			[yAxis, plot],
-			[null, xAxis]
+			[yAxisPlayer, plotGroup, yAxisTime],
+			[null,        xAxis,     null]
 		]);
 
-		chart.renderTo("#linechart");
-	}
-
-	function drawCharts() {
-		drawPlayerChart();
-		drawTimeChart();
+		chart.renderTo("#recordtimeline");
 	}
 
 	jQuery(document).ready(function() { drawCharts(); });
 </script>
 
 <svg id="recordtimeline" style="width: 100%; height: 350px;"></svg>
-<svg id="linechart" style="width: 100%; height: 400px;"></svg>
 <p>Important note<p>
 <p>The reason the time dropped like a rock from Arctic_Eagle's time wasn't that his runs were bad.  In fact they were very good.  It's that Solairflaire found the Thunderbird skip, and that completely changed the possible routing.  In addition, the glitched hammer and Palace 7 were routed in.</p>
 </body>
