--- a/index.html
+++ b/index.html
@@ -41,9 +41,19 @@
 		{ name: 'Ian "Opus" Napierkowski',            time: '18:25', begin: new Date(2017, 1, 0),   end: new Date(2017, 1, 4) },
 		{ name: 'Lloyd "Simpoldood" M.',              time: '18:23', begin: new Date(2017, 1, 4),   end: new Date(2017, 1, 4) },
 		{ name: 'Ian "Opus" Napierkowski',            time: '18:18', begin: new Date(2017, 1, 4),   end: new Date(2017, 1, 4) },
-		{ name: 'Ian "Opus" Napierkowski',            time: '18:12', begin: new Date(2017, 1, 4),   end: new Date(2017, 1, 4) },
+		{ name: 'Ian "Opus" Napierkowski',            time: '18:12', begin: new Date(2017, 1, 4),   end: new Date(2017, 1, 18) },
 		{ name: 'Ian "Opus" Napierkowski',            time: '18:07', begin: new Date(2017, 1, 18),  end: new Date() }
 	];
+
+	function getPlayerNames(data) {
+		var ret = [];
+		z2Data.forEach(function(row) {
+			if(-1 == ret.indexOf(row.name)) {
+				ret.push(row.name);
+			}
+		});
+		return ret;
+	}
 
 	function convertTime(s) {
 		var c = s.split(':');
@@ -52,6 +62,7 @@
 	}
 
 	function drawZ2Charts() {
+		var playerNames = getPlayerNames(z2Data);
 		var colorScale = new Plottable.Scales.Color();
 
 		var xScale = new Plottable.Scales.Time();
@@ -65,7 +76,7 @@
 		  .x(           function(d) { return d.begin; }, xScale)
 		  .x2(          function(d) { return d.end;   })
 		  .y(           function(d) { return d.name;  }, yScalePlayer)
-		  .attr("fill", function(d) { return d.time;  }, colorScale)
+		  .attr("fill", function(d) { return playerNames.indexOf(d.name);  }, colorScale)
 		  .addDataset(new Plottable.Dataset(z2Data));
 
 		var xScale = new Plottable.Scales.Time();
@@ -77,7 +88,8 @@
 		var plotTime = new Plottable.Plots.Line()
 		  .x(           function(d) { return d.begin;              }, xScale)
 		  .y(           function(d) { return convertTime(d.time);  }, yScaleTime)
-		  .attr("fill", function(d) { return d.name;               }, colorScale)
+		  .attr("stroke", function(d) { return "#000000"; } )
+		  .interpolator("step-after")
 		  .addDataset(new Plottable.Dataset(z2Data));
 
 		var plotGroup = new Plottable.Components.Group([plotPlayer, plotTime]);
