Fix copy/paste error

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <body>
 <svg class="timeline" id="loztimeline"></svg>
 <svg class="timeline" id="z2timeline"></svg>
-<div class="plotpopup");
+<div class="plotpopup"></div>
 <p>Important note<p>
 <p>The reason the time dropped like a rock from Arctic_Eagle's time wasn't that his runs were bad.  In fact they were very good.  It's that Solairflaire found the Thunderbird skip, and that completely changed the possible routing.  In addition, the glitched hammer and Palace 7 were routed in.</p>
 </body>
