Break out common CSS

--- a/index.html
+++ b/index.html
@@ -1,29 +1,15 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://raw.githubusercontent.com/palantir/plottable/master/plottable.css" charset="utf-8"></link>
-<script type="text/javascript" src="js/zeldahistory.js"></script>
+<link rel="stylesheet" href="css/zeldahistory.css"></link>
 <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="https://raw.githubusercontent.com/palantir/plottable/master/plottable.min.js"></script>
+<script type="text/javascript" src="js/zeldahistory.js"></script>
 <style type="text/css">
 	.timeline {
 		width: 100%;
 		height: 800px;
-	}
-
-	.plotpopup {
-		position: absolute;
-		width: 300px;
-		height: 48px;
-		margin-left: -200px;
-		margin-top: 25px;
-		font-family: Joystix, Mono;
-		font-size: 10px;
-		display: none;
-		border: solid 1px #777777;
-		background: rgba(100,100,100, .5);
-		color: #ffffff;
-		text-align: center;
 	}
 </style>
 <script type="text/javascript">
