Bringing in external libraries

--- a/loz.html
+++ b/loz.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<link rel="stylesheet" href="https://raw.githubusercontent.com/palantir/plottable/master/plottable.css" charset="utf-8"></link>
+<link rel="stylesheet" href="css/plottable.css" charset="utf-8"></link>
 <link rel="stylesheet" href="css/zeldahistory.css"></link>
 <link rel="stylesheet" href="css/common.css"></link>
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-<script type="text/javascript" src="https://raw.githubusercontent.com/palantir/plottable/master/plottable.min.js"></script>
+<script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
+<script type="text/javascript" src="js/d3.v3.min.js"></script>
+<script type="text/javascript" src="js/plottable.min.js"></script>
 <script type="text/javascript" src="js/zeldahistory.js"></script>
 <script type="text/javascript" src="js/loz.js"></script>
 </head>
