Remove unnecessary colon

--- a/loz.html
+++ b/loz.html
@@ -13,7 +13,7 @@
 <h1>The History of the Legend of Zelda Record</h1>
 <svg class="timeline" id="loztimeline"></svg>
 <div id="lozpopup"></div>
-<h2>Important note:</h2>
+<h2>Important note</h2>
 <p>There are technically two categories in this list. The runs by Darkwing Duck, and the runs by LackAttack24 immediately after him, were in a restricted category banning the use of Up+A death warps.</p>
 </body>
 </html>
