Add Red Candle links

--- a/z2.html
+++ b/z2.html
@@ -15,5 +15,6 @@
 <div id="z2popup"></div>
 <h2>Important note</h2>
 <p>The reason the time dropped like a rock from Arctic_Eagle's time wasn't that his runs were bad.  In fact they were very good.  It's that Solairflaire found the Thunderbird skip, and that completely changed the possible routing.  In addition, the glitched hammer and Palace 7 were routed in.</p>
+<p><a href="http://redcandle.us/Zelda_II:_The_Adventure_of_Link">Go back to Red Candle</a></p>
 </body>
 </html>
