--- a/loz.html
+++ b/loz.html
@@ -15,6 +15,7 @@
 <div id="lozpopup"></div>
 <h2>Important note</h2>
 <p>There are technically two categories in this list. The runs by Darkwing Duck, and the runs by LackAttack24 immediately after him, were in a restricted category banning the use of Up+A death warps.</p>
+<p><a href="http://redcandle.us/The_Legend_of_Zelda">Go back to Red Candle</a></p>
 </body>
 </html>
 
