add HTML titles

--- a/loz.html
+++ b/loz.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>History of the Legend of Zelda Record</title>
 <link rel="stylesheet" href="css/plottable.css" charset="utf-8"></link>
 <link rel="stylesheet" href="css/zeldahistory.css"></link>
 <link rel="stylesheet" href="css/common.css"></link>
