--- a/z2.html
+++ b/z2.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<title>History of the Zelda II Record</title>
 <link rel="stylesheet" href="css/plottable.css" charset="utf-8"></link>
 <link rel="stylesheet" href="css/zeldahistory.css"></link>
 <link rel="stylesheet" href="css/common.css"></link>
