Rewrite the record code to use plotly

--- a/loz.html
+++ b/loz.html
@@ -1,21 +1,17 @@
 <html>
 <head>
 <title>History of the Legend of Zelda Record</title>
-<link rel="stylesheet" href="css/plottable.css" charset="utf-8"></link>
 <link rel="stylesheet" href="css/zeldahistory.css"></link>
 <link rel="stylesheet" href="css/common.css"></link>
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="js/d3.v3.min.js"></script>
-<script type="text/javascript" src="js/plottable.min.js"></script>
+<script type="text/javascript" src="js/plotly-1.40.1.min.js"></script>
 <script type="text/javascript" src="js/zeldahistory.js"></script>
 <script type="text/javascript" src="js/loz.js"></script>
 </head>
 <body>
-<h1>The History of the Legend of Zelda Record</h1>
-<svg class="timeline" id="loztimeline"></svg>
-<div id="lozpopup"></div>
+<div class="timeline" id="loztimeline"></div>
 <h2>Important note</h2>
-<p>There are technically two categories in this list. The runs by Darkwing Duck, and the runs by LackAttack24 immediately after him, were in a restricted category banning the use of Up+A death warps.</p>
+<p>There are technically two categories in this list. The runs by Darkwing Duck, and the runs by LackAttack24 immediately after him, were in a restricted category banning the use of Up+A death warps. Version differences may also complicate things, but were not known about at the time.</p>
 <p><a href="http://redcandle.us/The_Legend_of_Zelda">Go back to Red Candle</a></p>
 </body>
 </html>
