--- a/z2.html
+++ b/z2.html
@@ -1,19 +1,15 @@
 <html>
 <head>
 <title>History of the Zelda II Record</title>
-<link rel="stylesheet" href="css/plottable.css" charset="utf-8"></link>
 <link rel="stylesheet" href="css/zeldahistory.css"></link>
 <link rel="stylesheet" href="css/common.css"></link>
 <script type="text/javascript" src="js/jquery-2.2.4.min.js"></script>
-<script type="text/javascript" src="js/d3.v3.min.js"></script>
-<script type="text/javascript" src="js/plottable.min.js"></script>
+<script type="text/javascript" src="js/plotly-1.40.1.min.js"></script>
 <script type="text/javascript" src="js/zeldahistory.js"></script>
 <script type="text/javascript" src="js/z2.js"></script>
 </head>
 <body>
-<h1>The History of the Zelda II Record</h1>
-<svg class="timeline" id="z2timeline"></svg>
-<div id="z2popup"></div>
+<div class="timeline" id="z2timeline"></div>
 <h2>Important note</h2>
 <p>The reason the time dropped like a rock from Arctic_Eagle's time wasn't that his runs were bad.  In fact they were very good.  It's that Solairflaire found the Thunderbird skip, and that completely changed the possible routing.  In addition, the glitched hammer and Palace 7 were routed in.</p>
 <p><a href="http://redcandle.us/Zelda_II:_The_Adventure_of_Link">Go back to Red Candle</a></p>
